# lulum

./: .gitignore  README.md  pyproject.toml
llmer/llmer/: ChatViewModel.swift  ContentView.swift  llmerApp.swift
llmer/llmer.xcodeproj/: project.pbxproj
llmer/llmer/Engine/: EngineProtocol.swift  MLXEngine.swift
llmer/llmer/Model/: ChatMessage.swift  ModelInfo.swift
llmer/llmer/Views/: ChatView.swift  MessageBubble.swift  ModelPickerView.swift
src/lulum/: __main__.py  cli.py  config.py  history.py  shell.py  updater.py
src/lulum/engine/: __init__.py  apple-llm.swift  apple.py  base.py  mlx.py  ollama.py
tests/: test_cli.py  test_mlx_engine.py  test_shell.py
