[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lulum"
version = "0.1.1"
description = "Unified local LLM shell"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
mlx = ["mlx-lm>=0.19"]

[tool.hatch.build.targets.wheel]
packages = ["src/lulum"]

[tool.hatch.build.targets.wheel.force-include]
"src/lulum/engine/apple-llm.swift" = "lulum/engine/apple-llm.swift"

[project.scripts]
lulum = "lulum.__main__:main"
