[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lulum"
version = "0.1.2"
description = "Unified local LLM shell"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
mlx = ["mlx-lm>=0.19"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lulum"]

[tool.hatch.build.targets.wheel.force-include]
"src/lulum/engine/apple-llm.swift" = "lulum/engine/apple-llm.swift"

[project.scripts]
lulum = "lulum.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
